--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,18 +12,27 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      
+
   pgadmin:
-     image: dpage/pgadmin4
-     restart: always
-     container_name: nest-pgadmin4
-     environment:
-       - PGADMIN_DEFAULT_EMAIL=admin@admin.com
-       - PGADMIN_DEFAULT_PASSWORD=pgadmin4
-     ports:
-       - '5050:80'
-     depends_on:
+    image: dpage/pgadmin4
+    restart: always
+    container_name: nest-pgadmin4
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
+      - PGADMIN_DEFAULT_PASSWORD=pgadmin4
+    ports:
+      - '5050:80'
+    depends_on:
       - postgres
+
+  mongodb:
+    image: mongo
+    container_name: mongodb
+    ports:
+      - "27018:27017"
+    volumes:
+      - mongodb_data:/data/db
 
 volumes:
   postgres_data:
+  mongodb_data:
